# mpris-controller

./: Cargo.toml
client/: Cargo.toml
client/src/: main.rs
examples/: list_names.rs
lib/: Cargo.toml  build.rs
lib/src/: items.proto  lib.rs  player.rs
player/: Cargo.toml
player/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
src/: lib.rs  main.rs
