[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio.workspace = true
lib.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true 
tracing-appender.workspace = true 
futures.workspace = true
zbus.workspace = true
prost = "0.14.3"
