[package]
name = "lib"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true 
tracing-appender.workspace = true 
futures.workspace = true
zbus.workspace = true
prost = "0.14.3"
bytes = "1.11.1"

[build-dependencies]
prost-build = "0.14.3"
