[package]
name = "player"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
lib.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true 
tracing-appender.workspace = true 
futures.workspace = true
zbus.workspace = true
async-trait = "0.1.89"
