[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
lib.workspace = true
tokio.workspace = true
futures-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true 
tracing-appender.workspace = true 
futures.workspace = true
zbus.workspace = true
prost = "0.14.3"
